--- a/contact.html
+++ b/contact.html
@@ -49,7 +49,7 @@
             </div>
         </div>
         <div class="mobile-menu">
-            <a class="mobile-link" onclick="closeMenu()" href="#home">Home</a>
+            <a class="mobile-link" onclick="closeMenu()" href="index.html">Home</a>
             <a class="mobile-link" onclick="closeMenu()" href="#about-us">O nas</a>
             <a class="mobile-link" onclick="closeMenu()" href="#offers">Oferta</a>
             <a class="mobile-link" onclick="closeMenu()" href="contact.html">Kontakt</a>
