--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             </div>
         </div>
         <div class="mobile-menu">
-            <a class="mobile-link" onclick="closeMenu()" href="#home">Home</a>
+            <a class="mobile-link" onclick="closeMenu()" href="index.html">Home</a>
             <a class="mobile-link" onclick="closeMenu()" href="#about-us">O nas</a>
             <a class="mobile-link" onclick="closeMenu()" href="#offers">Oferta</a>
             <a class="mobile-link" onclick="closeMenu()" href="contact.html">Kontakt</a>
@@ -76,7 +76,7 @@
                 <h2 class="section-heading">o nas</h2>
                 <div class="container">
                     <div class="about-us-photo">
-                        <img src="/src/img/waters640.jpg" alt="Dekoracyjny kamień w wodzie na tle lasu">
+                        <img src="./src/img/waters640.jpg" alt="Dekoracyjny kamień w wodzie na tle lasu">
                     </div>
                     <div class="about-us-text">
                         <h3>Niezapomniane przygody</h3>
