--- a/offers.html
+++ b/offers.html
@@ -48,7 +48,7 @@
             </div>
         </div>
         <div class="mobile-menu">
-            <a class="mobile-link" onclick="closeMenu()" href="#home">Home</a>
+            <a class="mobile-link" onclick="closeMenu()" href="index.html">Home</a>
             <a class="mobile-link" onclick="closeMenu()" href="#about-us">O nas</a>
             <a class="mobile-link" onclick="closeMenu()" href="#offers">Oferta</a>
             <a class="mobile-link" onclick="closeMenu()" href="contact.html">Kontakt</a>
@@ -127,7 +127,7 @@
     <div class="wrapper">
         <div class="additional-cards">
             <div class="additional-card">
-                <img src="/src/img/line1920.jpg" alt="Zdjęcie parku linowego">
+                <img src="./src/img/line1920.jpg" alt="Zdjęcie parku linowego">
                 <div class="additional-text">
                     <h3>Park Linowy</h3>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugiat voluptatem praesentium voluptate
@@ -137,7 +137,7 @@
                 </div>
             </div>
             <div class="additional-card">
-                <img src="/src/img/people1920.jpg" alt="Ludzie siedzący przy ognisku">
+                <img src="./src/img/people1920.jpg" alt="Ludzie siedzący przy ognisku">
                 <div class="additional-text">
                     <h3>Obiado-Kolacja</h3>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugiat voluptatem praesentium voluptate
@@ -147,7 +147,7 @@
                 </div>
             </div>
             <div class="additional-card">
-                <img src="/src/img/mushroom1920.jpg" alt="Zdjęcie grzyba pośród mchu">
+                <img src="./src/img/mushroom1920.jpg" alt="Zdjęcie grzyba pośród mchu">
                 <div class="additional-text">
                     <h3>Zbieranie grzybów</h3>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugiat voluptatem praesentium voluptate
@@ -200,7 +200,7 @@
 
 
 </footer>
-    <script src="/dist/js/main.min.js"></script>
+    <script src="./dist/js/main.min.js"></script>
 </body>
 
 </html>
